@@ -1,3 +1,4 @@
 <Ui xmlns="http://www.blizzard.com/wow/ui/">
-	<Script file='en_us.lua'/>
+	<Script file='enUS.lua'/>
+	<Script file='esMX.lua'/>
 </Ui>
